// Copyright(c) 2017-2020 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

package org.lfedge.eve.common;

option go_package  = "github.com/lf-edge/eve/api/go/evecommon";
option java_package = "org.lfedge.eve.common";
option java_multiple_files = true;
option java_outer_classname = "Evecommon";

enum HashAlgorithm {
  HASH_ALGORITHM_INVALID = 0;
  HASH_ALGORITHM_SHA256_16BYTES = 1; // hash with sha256, the 1st 16 bytes of result
  HASH_ALGORITHM_SHA256_32BYTES = 2; // hash with sha256, the whole 32 bytes of result
}
