
syntax = "proto3";

option java_package = "com.zededa.cloud.uservice.proto";
option go_package = "github.com/zededa/api/zconfig";

import "devcommon.proto";

message SignatureInfo {
	string intercertsurl = 1;
	string signercerturl = 2;
	bytes signature = 3;
}

enum DsType {
	DsUnknown = 0;
	DsHttp  = 1;
	DsHttps = 2;
	DsS3    = 3;
	DsSFTP	= 4;	
}

message DatastoreConfig {
	string id = 100;

	DsType dType = 1;

	string fqdn = 2;

	string apiKey = 3;

	string password = 4;

	// depending on datastore types, it could be bucket or path
	string dpath = 5;
}


enum Format {
	FmtUnknown = 0;	
	Raw   = 1;
	QCOW  = 2;
	QCOW2 = 3;
	VHD   = 4;
	VMDK  = 5;
	OVA   = 6;
	VHDX  = 7;
}

message Image {
	string id = 100;		// deprecated
	UUIDandVersion uuidandversion = 1;
	// it could be relative path/name as well
	string name = 2;

	string sha256 = 3;
	int64 size = 7;           // deprecated
	Format iformat = 4;

	// if its signed image
	SignatureInfo siginfo = 5;

	string dsId = 6;
	int64 sizeBytes = 8;
}

enum Target {
	TgtUnknown = 0;
	Disk   = 1;
	Kernel = 2;
	Initrd = 3;
	RamDisk = 4;
}

enum DriveType {
	Unclassified = 0;
	CDROM   = 1;
	HDD     = 2;
	NET     = 3;
	APPHD   = 4;
}

message Drive {
	Image image = 1;
	int64 maxsize = 2;     // deprecated
	bool readonly = 5;
	bool preserve = 6;
	DriveType drvtype = 8;
	Target target = 9;
	int64 maxsizebytes = 10;
	int64 minsizebytes = 11;	// required minimum storage size
	string mountpoint = 12;	// domU mount point
}
